@@ -26,6 +26,7 @@ Changelog for getTables.
 - having на фильтрах.
 - action set.
 - отмена focus position: absolute;
+- !class_exists('PHPExcel')
 
 1.11.4-alpha
 - Адаптация под modx3(3.0.1) и pdoTools3.
